Fix iPhone bug with invisible content

--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -39,8 +39,8 @@ body, html
   z-index: $defaultZIndex - 1
 
 .page
-  // TODO: Check
-  overflow: hidden
+  // TODO: Check (Bug on iPhone)
+  //overflow: hidden
 
   &__content
     display: flex
